Version 0.9 - Complete refactoring